force-app/main/default/objects/Error_Log__c/Error_Log__c.object-meta.xml
<CustomObject>
    <description>Object used to store error logs. (PER-2431)</description>
    <label>Chuzo Error Log</label>
    <nameField>
        <displayFormat>EL-{00000000}</displayFormat>
        <label>Error Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chuzo Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>