force-app/main/default/objects/Error_Log__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <description>Name of the apex class or lightning web component in which the error occurred. (PER-2431)</description>
    <label>Component</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>