force-app/main/default/objects/Error_Log__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>The endpoint that is failing, is only applicable if the type is ‘API Error’. (PER-2431)</description>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>