force-app/main/default/objects/Error_Log__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>If internal, this is the error message from the exception + the line number, if API call, then it is the response. (PER-2431)</description>
    <label>Error</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>