force-app/main/default/objects/Error_Log__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <description>Provider selected by the user in Chuzo. Leave empty if not applicable. (PER-2431)</description>
    <label>Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>