force-app/main/default/objects/Error_Log__c/fields/Provider_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Provider_Subtype__c</fullName>
    <label>Provider Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beam</fullName>
            </value>
            <value>
                <fullName>Stream</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>