force-app/main/default/objects/Error_Log__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <description>The request for the API call, is only applicable if the type is ‘API Error’. (PER-2431)</description>
    <label>Request</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>