force-app/main/default/objects/Error_Log__c/fields/Tab__c.field-meta.xml
<CustomField>
    <fullName>Tab__c</fullName>
    <description>Tab in which the error occurred in Chuzo. Leave empty if not applicable. (PER-2431)</description>
    <label>Tab</label>
    <length>255</length>
    <type>Text</type>
</CustomField>