force-app/main/default/objects/Error_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Determines if the error is coming from an API or if it is internal. (PER-2431)</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Error</fullName>
            </value>
            <value>
                <fullName>API Error</fullName>
            </value>
            <value>
                <fullName>Lead Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>