force-app/main/default/objects/Error_Log__c/validationRules/EndpointRequiredForAPIError.validationRule-meta.xml
<ValidationRule>
    <fullName>EndpointRequiredForAPIError</fullName>
    <active>true</active>
    <description>Makes Endpoint field required when Type is API Error</description>
    <errorConditionFormula>AND(ISPICKVAL( Type__c , &apos;API Error&apos;), Endpoint__c = &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Endpoint__c</errorDisplayField>
    <errorMessage>Endpoint is required for API Error Logs</errorMessage>
</ValidationRule>