force-app/main/default/objects/Error_Log__c/validationRules/ErrorFieldRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ErrorFieldRequired</fullName>
    <active>true</active>
    <description>Makes Error field required</description>
    <errorConditionFormula>Error__c = &apos;&apos;</errorConditionFormula>
    <errorDisplayField>Error__c</errorDisplayField>
    <errorMessage>An error is required. If internal, this is the error message from the exception + the line number, if API call, then it is the response</errorMessage>
</ValidationRule>