force-app/main/default/objects/Error_Log__c/validationRules/RequestRequiredForAPIError.validationRule-meta.xml
<ValidationRule>
    <fullName>RequestRequiredForAPIError</fullName>
    <active>true</active>
    <description>Makes Request field required when Type is API Error</description>
    <errorConditionFormula>AND(ISPICKVAL( Type__c , &apos;API Error&apos;), Request__c = &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Request__c</errorDisplayField>
    <errorMessage>Request is required for API Error Logs</errorMessage>
</ValidationRule>