force-app/main/default/objects/Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Provider__c</columns>
    <columns>Tab__c</columns>
    <columns>Component__c</columns>
    <columns>Error__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>9/22/2025 12:00 AM</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>API Error</value>
    </filters>
    <filters>
        <field>Provider__c</field>
        <operation>equals</operation>
        <value>Frontier</value>
    </filters>
    <label>All</label>
</ListView>