force-app/main/default/objects/Error_Log__c/listViews/Spectrum_iframe_Errors.listView-meta.xml
<ListView>
    <fullName>Spectrum_iframe_Errors</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Provider__c</columns>
    <columns>Tab__c</columns>
    <columns>Component__c</columns>
    <columns>Error__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Provider__c</field>
        <operation>equals</operation>
        <value>Spectrum (iframe)</value>
    </filters>
    <label>Spectrum iframe Errors</label>
</ListView>